--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,4 +9,10 @@ services:
       - .:/app # Monta o diretório atual no container
     environment:
       - FLASK_ENV=development # Define a variável de ambiente para desenvolvimento (se estiver usando Flask)
+      - DB_NAME=${DB_NAME} # Define a variável de ambiente DB_NAME
+      - DB_USER=${DB_USER} # Define a variável de ambiente DB_USER
+      - DB_PASSWORD=${DB_PASSWORD} # Define a variável de ambiente DB_PASSWORD
+      - DB_HOST=${DB_HOST} # Define a variável de ambiente DB_HOST
+      - DB_PORT=${DB_PORT} # Define a variável de ambiente DB_PORT
+      - DB_SSL=${DB_SSL} # Define a variável de ambiente DB_SSL
     command: python main.py # Comando para iniciar a aplicação
