--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ colorama==0.4.6
 debugpy==1.8.2
 flasgger==0.9.7.1
 Flask==3.0.3
+flask_jwt_extended==4.6.0
 itsdangerous==2.2.0
 Jinja2==3.1.4
 jsonschema==4.23.0
@@ -26,3 +27,4 @@ six==1.16.0
 typing_extensions==4.12.2
 Werkzeug==3.0.3
 pyyaml==6.0.1
+requests == 2.32.3
