--- a/facade/DocumentacaoFacade/IntegrantesFacade.yml
+++ b/facade/DocumentacaoFacade/IntegrantesFacade.yml
@@ -31,6 +31,9 @@ AddIntegrante:
           linkSelfie:
             type: string
             description: O link da selfie do integrante
+          linkedin:
+            type: string
+            description: O link do linkedin do integrante
           setorId:
             type: integer
             description: O ID do setor do integrante
