--- a/facade/DocumentacaoFacade/PlanejamentoRelatorioFacade.yml
+++ b/facade/DocumentacaoFacade/PlanejamentoRelatorioFacade.yml
@@ -11,24 +11,19 @@ AddPlanejamentoRelatorio:
           - link
           - anoDocumento
           - tipoDocumento
-          - matriculaResponsavel
         properties:
           link:
             type: string
             description: O link do documento
             example: "http://example.com/documento.pdf"
           anoDocumento:
-            type: string
+            type: date
             description: O ano do documento
             example: "2023"
           tipoDocumento:
             type: string
             description: O tipo do documento (planejamento ou relatorio)
             example: "planejamento"
-          matriculaResponsavel:
-            type: string
-            description: A matrícula do integrante responsável
-            example: "2019000000"
   responses:
     200:
       description: Planejamento ou Relatório criado com sucesso
