--- a/.github/workflows/master_backentpetufu.yml
+++ b/.github/workflows/master_backentpetufu.yml
@@ -78,4 +78,10 @@ jobs:
         with:
           app-name: 'backentpetufu'
           slot-name: 'Production'
-          
+          env: 
+            DB_NAME: ${{ secrets.DB_NAME }}
+            DB_USER: ${{ secrets.DB_USER }}
+            DB_PASSWORD: ${{ secrets.DB_PASSWORD }}
+            DB_HOST: ${{ secrets.DB_HOST }}
+            DB_PORT: ${{ secrets.DB_PORT }}
+            DB_SSL: ${{ secrets.DB_SSL }}
