--- a/requirements.txt
+++ b/requirements.txt
@@ -27,5 +27,7 @@ six==1.16.0
 typing_extensions==4.12.2
 Werkzeug==3.0.3
 pyyaml==6.0.1
-requests == 2.32.3
+requests==2.32.3
+firebase-admin==6.4.0
+google-auth==2.25.2
 flask-cors==5.0.0
